--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
   display: flex;
   text-align: center;
+  justify-content: center;
+  gap: 20px;
 }
 
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+  padding: 5px;
 }
