--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   display: flex;
   text-align: center;
   justify-content: center;
+  flex-wrap: wrap;
+  /* align-content: center; not working */
   gap: 20px;
 }
 
