Rename slice file&add logic to export (incomplete)

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   gap: 20px;
 }
 
-table, th, td {
+table, th, td, button {
   border: 1px solid black;
   border-collapse: collapse;
   padding: 5px;
