--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,28 @@
 .App {
   display: flex;
+  flex-direction: column;
   text-align: center;
   justify-content: center;
   flex-wrap: wrap;
-  /* align-content: center; not working */
+  align-items: center;
+  height: 100vh;
+}
+
+.table {
+  display: flex;
+  flex-direction: row;
   gap: 20px;
+  margin: 20px;
 }
 
 table, th, td, button {
   border: 1px solid black;
   border-collapse: collapse;
   padding: 5px;
-  height: 100%;
+  height:fit-content;
+  cursor: grab;
+}
+
+.draggable:active {
+  cursor: grabbing;
 }
