--- a/src/Error.css
+++ b/src/Error.css
@@ -15,9 +15,10 @@ button {
   flex-direction: row;
   border-radius: 5px;
   text-align: center;
+  color: black;
 }
 
 button:hover {
-  color: #4d4d4d;
+  background-color: rgb(226, 226, 226);
   cursor: pointer;
 }
