Fix hover on 1st row and fix Export function

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,16 @@ tr:not(:first-child):hover {
 .draggable:active {
   cursor: grabbing;
 }
+
+button {
+  display: flex;
+  flex-direction: row;
+  border-radius: 5px;
+  text-align: center;
+  color: black;
+}
+
+button:hover {
+  background-color: rgb(226, 226, 226);
+  cursor: pointer;
+}
