--- a/src/components/BreedsTable.css
+++ b/src/components/BreedsTable.css
@@ -1,13 +1,14 @@
 .table {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-content: center;
   gap: 20px;
   margin: 20px;
 }
 
 table, th, td, button {
   border: 1px solid rgb(170, 170, 170);
-  border-collapse: collapse;
   padding: 5px;
   height: fit-content;
 }
@@ -19,8 +20,4 @@ tr:hover {
 
 .table-header {
   pointer-events: none;
-}
-
-.draggable:active {
-  cursor: grabbing;
 }
